--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/Func测试/FuncTestVC.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/Func测试/FuncTestVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23077.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23068.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -475,16 +475,16 @@
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="6Pl-kL-kSI"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="53" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sWd-a8-CD4">
-                            <rect key="frame" x="53" y="7" width="57" height="30"/>
+                        <button opaque="NO" tag="58" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sWd-a8-CD4">
+                            <rect key="frame" x="53" y="7" width="53" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="53: item"/>
+                            <state key="normal" title="58:算法"/>
                             <connections>
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="vCJ-tP-cSP"/>
                             </connections>
                         </button>
                         <button opaque="NO" tag="54" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7QC-Ye-cUb">
-                            <rect key="frame" x="115" y="7" width="81" height="30"/>
+                            <rect key="frame" x="111" y="7" width="81" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="54:Network"/>
                             <connections>
@@ -492,7 +492,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="55" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ufm-gR-IRl">
-                            <rect key="frame" x="201" y="7" width="125" height="30"/>
+                            <rect key="frame" x="197" y="7" width="129" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="55_navi"/>
                             <connections>
