--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/UI测试/UI测试2/MMUITestTwoViewController.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/UI测试/UI测试2/MMUITestTwoViewController.xib
@@ -1,22 +1,76 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MMUITestTwoViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MMUITestTwoViewController" customModule="Swift_SweetSugar" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lashenceshi" translatesAutoresizingMaskIntoConstraints="NO" id="mIr-vB-8IF">
+                    <rect key="frame" x="8" y="67" width="80" height="60"/>
+                    <color key="backgroundColor" systemColor="systemTealColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="aXz-dy-Upz"/>
+                        <constraint firstAttribute="width" constant="80" id="dcI-fB-qFB"/>
+                    </constraints>
+                </imageView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lashenceshi" translatesAutoresizingMaskIntoConstraints="NO" id="QMh-z4-jUJ">
+                    <rect key="frame" x="8" y="135" width="120" height="60"/>
+                    <color key="backgroundColor" systemColor="systemTealColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="Lcd-DE-3mh"/>
+                        <constraint firstAttribute="width" constant="120" id="X6z-ld-aw3"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="单词本" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MM8-do-uvc">
+                    <rect key="frame" x="30" y="103" width="36" height="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="5c27563705bd7b06eb747821e60a511d" translatesAutoresizingMaskIntoConstraints="NO" id="guJ-mL-jIh">
+                    <rect key="frame" x="0.0" y="271" width="165" height="80"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="5c27563705bd7b06eb747821e60a511d" translatesAutoresizingMaskIntoConstraints="NO" id="ARB-6B-bxW">
+                    <rect key="frame" x="0.0" y="359" width="109" height="47"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemGray4Color"/>
+            <constraints>
+                <constraint firstItem="MM8-do-uvc" firstAttribute="centerX" secondItem="mIr-vB-8IF" secondAttribute="centerX" id="E7v-as-H6X"/>
+                <constraint firstItem="mIr-vB-8IF" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="8" id="Icd-XQ-hYX"/>
+                <constraint firstItem="QMh-z4-jUJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="JSe-LM-U5H"/>
+                <constraint firstItem="QMh-z4-jUJ" firstAttribute="top" secondItem="mIr-vB-8IF" secondAttribute="bottom" constant="8" id="MUs-TP-GrJ"/>
+                <constraint firstItem="MM8-do-uvc" firstAttribute="bottom" secondItem="mIr-vB-8IF" secondAttribute="bottom" constant="-9" id="bcf-cB-Fvi"/>
+                <constraint firstItem="mIr-vB-8IF" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="fdY-ka-wW4"/>
+            </constraints>
+            <point key="canvasLocation" x="130.53435114503816" y="-12.67605633802817"/>
         </view>
     </objects>
+    <resources>
+        <image name="5c27563705bd7b06eb747821e60a511d" width="164.66667175292969" height="80"/>
+        <image name="lashenceshi" width="79.333335876464844" height="60"/>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529410000001" green="0.69019607839999997" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
